add dynamic doctor search count endpoint and gender filter - Implement countDoctorsDynamic using Criteria API for count calculation - Add gender field to SearchRequestDto and update DoctorRepositoryImpl predicates - Expose GET /api/doctors/search/count REST endpoint in DoctorController